first app with angular

--- a/01-week/components/my-first-project/src/app/list/list.component.html
+++ b/01-week/components/my-first-project/src/app/list/list.component.html
@@ -1,1 +1,17 @@
-<p id="title">list works!</p>
+<button (click)="handleClickEvent($event)">
+    <ng-container *ngIf="showLastName">Hide </ng-container>
+    <ng-container *ngIf="!showLastName">Show </ng-container>
+    last name
+</button>
+
+<div *ngIf="showSelectedIndex">
+  Selected index is {{selectedUserIndex}}
+</div>
+
+<ul id="list-container">
+  <li *ngFor="let user of users; let i = index;"  class="list-item">
+    <app-list-item [userItem]="user" [showLastNameValue]="showLastName" staticString="static" [staticNumber]="myNumber" (click)="listItemClickHandler(i)" (customEvent)="customEventHandler($event)">
+
+    </app-list-item>
+  </li>
+</ul>
