--- a/01-week/components/my-first-project/src/app/app.component.html
+++ b/01-week/components/my-first-project/src/app/app.component.html
@@ -1,3 +1,7 @@
-<p id="title">APP Component</p>
+<p id="title">{{title}}</p>
+
+<input type="text" #titleInput> <!--The # gives us reference to the input html element-->
+<button (click)="changeTitleHandler(titleInput.value)">Change title</button>
+
 
 <app-list></app-list>
