build elements and styling

--- a/02-week/workshop/forum/src/app/main/main.component.html
+++ b/02-week/workshop/forum/src/app/main/main.component.html
@@ -1,2 +1,4 @@
-<app-theme-list></app-theme-list>
-<app-posts-list></app-posts-list>
+<div class="container">
+  <app-theme-list></app-theme-list>
+  <app-posts-list></app-posts-list>
+</div>
