--- a/02-week/workshop/forum/src/app/posts-list/posts-list.component.html
+++ b/02-week/workshop/forum/src/app/posts-list/posts-list.component.html
@@ -1,1 +1,17 @@
-<p>posts-list works!</p>
+<app-loader *ngIf="!postList"></app-loader>
+<aside>
+  <div class="aside">
+    <h2 class="title">Recent posts</h2>
+    <div *ngFor="let post of postList">
+      <div class="aside-theme">
+        <a href="#">
+          <h3>{{ post.text }}</h3>
+          <p>{{ post.userId.username }}</p>
+          <p>
+            <span>{{ post.created_at }}</span>
+          </p>
+        </a>
+      </div>
+    </div>
+  </div>
+</aside>
