finish error and logged in logic

--- a/02-week/workshop/forum/src/app/posts-list/posts-list.component.html
+++ b/02-week/workshop/forum/src/app/posts-list/posts-list.component.html
@@ -1,3 +1,5 @@
+
+<div *ngIf="errorFetchingData">Error loading posts</div>
 <app-loader *ngIf="!postList"></app-loader>
 <aside>
   <div class="aside">
