--- a/02-week/workshop/forum/src/app/theme-list/theme-list.component.html
+++ b/02-week/workshop/forum/src/app/theme-list/theme-list.component.html
@@ -1,3 +1,5 @@
+
+<div *ngIf="errorFetchingData">Error Loading Themes</div>
 <app-loader *ngIf="!themeList"></app-loader>
 <div class="theme-title">
   <!-- theme component  -->
