finish lecture on http and observables

--- a/02-week/angular-observables/src/app/app.component.html
+++ b/02-week/angular-observables/src/app/app.component.html
@@ -3,4 +3,6 @@
 <!-- {{counter}} -->
 <input #nameInput/>
 <button (click)="addUserHandler(nameInput)">Add user</button>
-<app-test [users]="users"></app-test>
+<!-- <app-test [users]="users"></app-test> -->
+
+<app-user-list></app-user-list>
