--- a/03-week/modules-routing/src/app/app.component.html
+++ b/03-week/modules-routing/src/app/app.component.html
@@ -1,4 +1,5 @@
-
+<app-navigation></app-navigation>
 <app-global-loader></app-global-loader>
-<app-user-list></app-user-list>
-<app-post-list></app-post-list>
+<router-outlet></router-outlet>
+
+<app-standalone-cmp [showValue]='true'></app-standalone-cmp>
