--- a/workshop/forum-web/src/app/core/header/header.component.html
+++ b/workshop/forum-web/src/app/core/header/header.component.html
@@ -25,7 +25,7 @@
   <nav>
     <ul>
       <li>
-        <a href="#">Home</a>
+        <a routerLink="/home">Home</a>
       </li>
       <li>
         <a href="#">Themes</a>
