--- a/workshop/forum-web/src/app/home/home.component.html
+++ b/workshop/forum-web/src/app/home/home.component.html
@@ -8,13 +8,13 @@
   <div class="logged">
     <ul>
       <li>
-        <a href="#">
+        <a routerLink="/auth/login">
           <i class="fas fa-sign-in-alt"></i>
           Login
         </a>
       </li>
       <li>
-        <a href="#">
+        <a routerLink="/auth/register">
           <i class="fas fa-user-plus"></i>
           Register
         </a>
