add more pages and styling

--- a/workshop/forum-web/src/app/core/header/header.component.html
+++ b/workshop/forum-web/src/app/core/header/header.component.html
@@ -28,10 +28,10 @@
         <a routerLink="/home">Home</a>
       </li>
       <li>
-        <a href="#">Themes</a>
+        <a routerLink="/theme">Themes</a>
       </li>
       <li>
-        <a href="#">New Theme</a>
+        <a routerLink="/theme/new">New Theme</a>
       </li>
     </ul>
   </nav>
