--- a/workshop/forum-web/src/app/main/main.component.html
+++ b/workshop/forum-web/src/app/main/main.component.html
@@ -1,9 +1,9 @@
+<app-home></app-home>
 <div class="container">
-    
-    <main *ngIf="isLoggedIn">
-      <div class="theme-list">
-        <app-theme-list></app-theme-list>
-      </div>
-      <app-posts-list></app-posts-list>
-    </main>
+  <main>
+    <div class="theme-list">
+      <app-theme-list></app-theme-list>
+    </div>
+  </main>
+  <app-posts-list></app-posts-list>
 </div>
