finish with resolver for themes

--- a/workshop/forum-web/src/app/app.component.html
+++ b/workshop/forum-web/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
+<div [ngClass]="{ 'my-class' : showMyClass }">Hello</div>
+<button (click)="toggleMyClass()">Toggle</button>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
